kubernetes/cluster/flux-operator/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.iac.gg/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator
spec:
  hostnames:
    - flux-operator.iac.gg
  parentRefs:
    - name: envoy-internal
      namespace: kube-system
  rules:
    - backendRefs:
        - name: flux-operator
          namespace: flux-system
          port: 9080
---
# yaml-language-server: $schema=https://schemas.iac.gg/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator-mcp
spec:
  hostnames:
    - flux-mcp.iac.gg
  parentRefs:
    - name: envoy-internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: flux-operator-mcp
          namespace: flux-system
          port: 9090
